[package]
name = "egui-macroquad"
version = "0.11.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme="README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "0.18.0"
egui-miniquad = { git = "https://github.com/buxx/egui-miniquad.git", rev="75e9420370df6ecc23feacfb95dc72020e434be2" }
macroquad = { version = "0.3.16", default-features = false }

[dev-dependencies]
egui_demo_lib = { version = "0.18.0", default-features = false }

[profile.release]
opt-level = 2
